src/style.css
* {
  margin: 0;
  padding: 0;
}

body {
  --primary-dark: #3A7CFF;
  --primary-color: #77A4FF;
  --secondary-color: #F5F6F8;
  --dark-grey: #2F3437;
  --light-grey: #8D8E8F;
  --border-grey: #CCCED1;
  --select-grey: #ECEEF3;
  --modal-box-shadow: 2px 2px 10px #00000025;
  --border-separator: 1px solid var(--border-grey);

  font-family: 'Roboto', Arial, Helvetica, sans-serif;
  color: var(--dark-grey);
  box-sizing: border-box;
  height: 100vh;

  display: grid;
  grid-template-columns: 350px 1fr;
  grid-template-rows: 82px 1fr;
}

input {
  background-color: unset;
}

a, button {
  cursor: pointer;
  font-family: inherit;
}

header {
  grid-column: span 2;
  align-self: center;
  height: 100%;

  padding-inline: 20px;
  background-color: var(--primary-color);
  color: white;
}

header > * {
  height: 100%;
}

.logo {
  display: flex;
  align-items: center;
  gap: 15px;
}

.logo span {
  font-family: 'RocknRoll One', sans-serif;
  font-size: 32px;
  letter-spacing: 0.05em;
}

nav {
  background-color: var(--secondary-color);
  padding: 15px 30px 0 30px;
  font-weight: 500;

  display: grid;
  grid-template-rows: min-content 1fr 50px;
}

nav ul {
  list-style: none;
  font-size: 18px;

  display: flex;
  flex-direction: column;
  gap: 10px;
}

nav ul.default-projects {
  padding-bottom: 15px;
}

nav ul.user-defined-projects {
  padding-top: 15px;
}

nav li a {
  padding: 14px 16px;

  display: flex;
  gap: 15px;
}

nav li a:hover,
nav li.active a {
  background-color: #e4e6ed;
}

nav li a .icon {
  height: 20px;
  
}

.icon.all {
  filter: brightness(0) saturate(100%) invert(61%) sepia(14%) saturate(3532%) hue-rotate(195deg) brightness(103%) contrast(101%);;
}

.icon.today {
  filter: brightness(0) saturate(100%) invert(70%) sepia(48%) saturate(761%) hue-rotate(317deg) brightness(100%) contrast(101%);
}

.icon.upcoming {
  filter: brightness(0) saturate(100%) invert(83%) sepia(12%) saturate(2187%) hue-rotate(69deg) brightness(103%) contrast(101%);
}

nav li a .task-total {
  margin-left: auto;
  color: var(--light-grey);
}

.nav-footer {
  height: 100%;
  border-top: var(--border-separator);

  display: flex;
  flex-direction: column;
  justify-content: center;
}

button.add-btn {
  margin-right: auto;
  background-color: unset;
  color: var(--dark-grey);
  border: none;
  font-size: 18px;
  font-weight: 500;

  display: flex;
  align-items: center;
}

img.add {
  height: 18px;
  filter: invert(17%) sepia(11%) saturate(519%) hue-rotate(159deg) brightness(90%) contrast(86%); /* match dark-grey */
}

button.add-btn:hover {
  color: black;
}

button.add-btn:hover img.add {
  filter: none;
}

main {
  padding: 55px;
}

.project-details .header-container {
  position: relative;
  width: max-content;

  display: flex;
  align-items: center;
}

h1,
.header-container input.title {
  min-height: 40px;
  font-size: 32px;
  font-weight: bold;
}

input.title {
  border: none;
  outline: none;
}

.ellipsis-menu {
  padding: 5px;
  height: 30px;  
  cursor: pointer;
}

.ellipsis-menu:hover {
  background-color: var(--select-grey);
}

.dropdown {
  position: absolute;
  top: 100%;
  left: calc(100% - 40px);
  list-style: none;
  box-shadow: var(--modal-box-shadow);
  font-weight: 500;

  display: flex;
  flex-direction: column;
  min-width: 125px;
}

.dropdown-option {
  cursor: pointer;
  padding: 14px 16px;

  display: grid;
  align-items: center;
  grid-template-columns: 1.2rem 1fr;
  gap: 8px;
}

.dropdown-option:hover {
  background-color: var(--select-grey);
}

.dropdown-option img {
  height: 1.2rem;
}

.dropdown-option.edit img {
  content: url('./assets/pencil.svg');
}

.dropdown-option.delete img {
  content: url('./assets/trash.svg');
  filter: brightness(0) saturate(100%) invert(52%) sepia(50%) saturate(7493%) hue-rotate(336deg) brightness(107%) contrast(103%);
}

.dropdown-option.delete {
  color: #FF4747;
}

.todo-container:not(.edit-view):hover {
  background-color: var(--select-grey);
  cursor: pointer;
}

.todo-container:not(.edit-view) .todo-item input:hover {
  cursor: pointer;
}

.edit-view {
  box-shadow: var(--modal-box-shadow);
}

.todo-item {
  margin-block: 15px;
  padding: 14px 16px;

  display: flex;
  align-items: center;
  gap: 10px;
}

.check-box {
  content: url('./assets/checkbox-empty.svg');
  height: 18px;
}

.todo-item .title {
  font-size: 18px;
}

.list-footer {
  margin-top: 50px;
  border-top: var(--border-separator);
  
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 50px;
}

button.add-todo {
  color: var(--primary-color);
}

button.add-todo:hover {
  color: var(--primary-dark);
}

button.add-todo img.add {
  filter: invert(60%) sepia(18%) saturate(1268%) hue-rotate(184deg) brightness(102%) contrast(102%);
}

button.add-todo:hover img.add {
  filter: invert(41%) sepia(85%) saturate(2348%) hue-rotate(206deg) brightness(100%) contrast(103%);
}

